objects/disco__Einstein_Model__mdt.object
<CustomObject>
    <description>Einstein model numbers are generated after populating and training models through Einstien. These models can then be used to evaluate photos/text against the criteria of the trained model and return a result. Ex. I train a Einstein Vision model to recognize if a photo is a townhouse or single-family house. I can then use that model number to send any number of new photos to be evaluated against the trained model</description>
    <fields>
        <fullName>disco__Description__c</fullName>
        <inlineHelpText>add a description for your model</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Model_Number__c</fullName>
        <description>model number provided by Einstein</description>
        <inlineHelpText>model number provided by Einstein</inlineHelpText>
        <label>Model Number</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Type__c</fullName>
        <description>Einstein API to use</description>
        <inlineHelpText>Einstein API to use</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intent</fullName>
                    <default>true</default>
                    <label>Intent</label>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Einstein Model</label>
    <pluralLabel>Einstein Models</pluralLabel>
</CustomObject>